--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <a href="www.yucsan.com" target="_blank">Visita mi portafolio de Diseño web version código puro</a>
         <br>
-        <a href="www.yucsan.com/visual">Visita mi portafolio de Diseño web version Worpress</a>
+        <a href="https://www.yucsan.com/visual">Visita mi portafolio de Diseño web version Worpress</a>
         <div>
            <img class="miFoto" src="img/fernando-topaz-enhance-faceai-sharpen.png" alt="fotoFernando"> 
         </div>
