--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Bienvenidos a la web de Fernando Yucsan Chang Cam</h1>
         <h2>Creada especialmente para lenguaje de Marcas</h2>
 
-        <a href="www.yucsan.com" target="_blank">Visita mi portafolio de Diseño web version código puro</a>
+        <a href="https://www.yucsan.com" target="_blank">Visita mi portafolio de Diseño web version código puro</a>
         <br>
         <a href="https://www.yucsan.com/visual">Visita mi portafolio de Diseño web version Worpress</a>
         <div>
